[package]
name = "libsudoku"
version = "0.1.0"
authors = ["simshi <simonshi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sudoku"
path = "src/lib.rs"

[[bin]]
name = "sudoku"
path = "src/main.rs"

[[bench]]
name = "ripple"
harness = false

[dependencies]
clap = "~2.33.3"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
